# HOTS-Fix

./: MANIFEST.in  README.md  pyproject.toml
data/parsed/: bare-minimum-requirements-2022.csv  cast-model-errors-2022.csv  ideal-variables-2022.csv  min-max-idealized-vars-2022.csv
data/raw-hots/: hd143208.nc  hd206022.nc  hd629332.nc  hd754187.nc  hd880288.nc  readme.md
hots-fix/: extract-and-clean.py  predict.py  train-and-save.py
hots_fix/: __init__.py  build_models.py  extract-and-clean.py  extract_and_clean.py  predictions.py  train_and_save.py
notebooks/: Compare_bottle_ctd.ipynb  Explore.ipynb  Filter_HOTS.ipynb  Imputation-v1.ipynb
